update my week 3 assignment work
